--- a/Halos/app/build.gradle
+++ b/Halos/app/build.gradle
@@ -27,6 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:support-annotations:25.1.0'
     compile 'com.android.support:design:25.1.0'
-    compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.android.gms:play-services:9.6.0'    // was previously 10.0.1 on APK 23
     testCompile 'junit:junit:4.12'
 }
