--- a/Halos/app/src/main/AndroidManifest.xml
+++ b/Halos/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,7 +39,12 @@
         <activity
             android:name=".HalosMapActivity"
             android:label="@string/title_activity_halos_map" />
-        <activity android:name=".RetrievePasswordActivity"></activity>
+        <activity android:name=".RetrievePasswordActivity" />
+        <activity
+            android:name=".Store"
+            android:label="Store" />
+        <activity android:name=".UserProfile"
+            android:label="Your Profile"></activity>
     </application>
 
 </manifest>
