--- a/Halos/app/build.gradle
+++ b/Halos/app/build.gradle
@@ -24,10 +24,15 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile('com.paypal.sdk:paypal-android-sdk:2.15.3') {
+        exclude group: 'io.card'
+    }
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:support-annotations:25.1.0'
     compile 'com.android.support:design:25.1.0'
-    compile 'com.google.android.gms:play-services:9.6.0'    // was previously 10.0.1 on APK 23
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'             // dependency: must download OkHttp!!
+    compile 'com.google.android.gms:play-services:9.6.0'
+    // was previously 10.0.1 on APK 23
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    // dependency: must download OkHttp!!
     testCompile 'junit:junit:4.12'
 }
