--- a/Halos/app/src/main/AndroidManifest.xml
+++ b/Halos/app/src/main/AndroidManifest.xml
@@ -54,10 +54,12 @@
         <activity
             android:name=".Checkout_Store"
             android:label="Store" />
-        <activity
+ <!--       <activity
             android:name="com.paypal.android.MEP.PayPalActivity"
             android:configChanges="keyboardHidden|orientation"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+            Might not Need- Don't remove.
+     -->
         <activity android:name=".ConfirmationActivity"></activity>
     </application>
 
