--- a/Halos/app/build.gradle
+++ b/Halos/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:support-annotations:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.google.android.gms:play-services:9.6.0'            // was previously 10.0.1 on APK 23
+    compile 'com.google.android.gms:play-services-location:9.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'                     // dependency: must download OkHttp!!
     compile 'com.google.code.gson:gson:2.8.0'                       // easy json parsing
     compile 'com.android.support:recyclerview-v7:25.1.1'
