--- a/Halos/app/build.gradle
+++ b/Halos/app/build.gradle
@@ -27,13 +27,19 @@ dependencies {
     compile('com.paypal.sdk:paypal-android-sdk:2.15.3') {
         exclude group: 'io.card'
     }
+    // was previously 10.0.1 on APK 23
+    // dependency: must download OkHttp!!
+    // easy json parsing
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:support-annotations:25.1.0'
     compile 'com.android.support:design:25.1.0'
-    compile 'com.google.android.gms:play-services:9.6.0'            // was previously 10.0.1 on APK 23
-    compile 'com.google.android.gms:play-services-location:9.2.0'
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'                     // dependency: must download OkHttp!!
-    compile 'com.google.code.gson:gson:2.8.0'                       // easy json parsing
+    compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.google.android.gms:play-services-drive:10.0.1'
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
