--- a/Halos/app/build.gradle
+++ b/Halos/app/build.gradle
@@ -40,6 +40,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
-    compile 'com.android.support.constraint:constraint-layout:+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.1'
     testCompile 'junit:junit:4.12'
 }
