--- a/Halos/app/src/main/AndroidManifest.xml
+++ b/Halos/app/src/main/AndroidManifest.xml
@@ -44,26 +44,26 @@
         <activity
             android:name=".HalosMapActivity"
             android:label="Home"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".RetrievePasswordActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".StoreActivity"
             android:label="Store"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".UserProfileActivity"
             android:label="Your Profile"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SettingsActivity"
             android:label="Settings"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Checkout_Store"
             android:label="Store"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <!--
             <activity
             android:name="com.paypal.android.MEP.PayPalActivity"
@@ -75,13 +75,13 @@
         <activity
             android:name=".TourMapActivity"
             android:label="@string/title_activity_tour_map"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".CreateTourActivity"
             android:label="@string/title_activity_create_tour"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".TourMapActivity_User"></activity>
     </application>
 
 </manifest>
